# fast_processing_arrow

./: .gitignore  README.md
data/: README.md
data/delta_tables/: README.md
data/parquet/: README.md
datafusion_examples/: Cargo.toml
datafusion_examples/src/: main.rs
delta_read_examples/: Cargo.toml
delta_read_examples/src/: main.rs
deltalake_examples/: Cargo.toml
deltalake_examples/src/: main.rs
polars_examples/: Cargo.toml
polars_examples/src/: main.rs
