[package]
name = "delta_read_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = [ "rt-multi-thread" ] }
datafusion = { version = "18.0" }
deltalake = { version = "0.7.0", features = [ "datafusion-ext" ] }

